--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,8 +8,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="@dimen/layout_height_textView"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_marginTop_button"
         android:background="@android:drawable/screen_background_dark_transparent"
         android:singleLine="false"
         android:textAlignment="viewEnd"
@@ -19,7 +21,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="123456789.0" />
 
 
     <Button
@@ -27,9 +30,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginStart="@dimen/layout_marginTop_button"
         android:fontFamily="sans-serif"
         android:text="1"
         android:textColor="@android:color/background_light"
@@ -45,9 +46,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginStart="@dimen/layout_marginTop_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="C"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -62,8 +62,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:text="("
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
@@ -77,8 +77,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:text=")"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
@@ -92,8 +92,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_margin_button"
+        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="^"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -108,8 +107,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="8"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -124,8 +121,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="2"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -140,9 +135,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginStart="@dimen/layout_marginTop_button"
         android:text="4"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -157,8 +150,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="5"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -173,9 +164,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginStart="@dimen/layout_marginTop_button"
         android:text="7"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -190,8 +179,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="3"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -206,8 +193,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="6"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -222,8 +207,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="9"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -238,9 +221,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginStart="@dimen/layout_marginTop_button"
         android:text="0"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -255,8 +236,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="."
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -271,8 +250,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
         android:text="="
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -287,8 +264,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="-"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -303,8 +278,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="+"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -319,8 +292,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="*"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -335,8 +306,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="/"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
