--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,44 +6,30 @@
     android:layout_height="match_parent"
     android:background="@drawable/fantasy_4339663_1280">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/layout_margin_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
+        android:background="@android:drawable/screen_background_dark_transparent"
+        android:singleLine="false"
+        android:textAlignment="viewEnd"
+        android:textColor="@android:color/background_light"
+        android:textSize="@dimen/button_textSize"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/layout_height_textView"
-                android:layout_marginStart="@dimen/layout_marginStart_button"
-                android:layout_marginTop="@dimen/layout_marginEnd_button"
-                android:layout_marginEnd="@dimen/layout_marginStart_button"
-                android:layout_marginBottom="@dimen/layout_marginEnd_button"
-                android:background="@android:drawable/screen_background_dark_transparent"
-                android:singleLine="false"
-                android:textAlignment="viewEnd"
-                android:textColor="@android:color/background_light"
-                android:textSize="@dimen/button_textSize"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="123456789.0"/>
 
     <Button
         android:id="@+id/button_clear"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
         android:text="C"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -58,6 +44,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:text="("
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
@@ -71,6 +58,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:text=")"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
@@ -84,7 +72,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
@@ -99,7 +87,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="8"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -114,9 +101,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:fontFamily="sans-serif"
         android:text="1"
         android:textColor="@android:color/background_light"
@@ -133,7 +119,6 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="2"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -148,8 +133,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
         android:text="4"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -164,7 +148,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="5"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -179,8 +162,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
         android:text="7"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -196,7 +178,6 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="3"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -211,7 +192,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="6"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -226,7 +206,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginBottom="@dimen/layout_margin_button"
         android:text="9"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -241,7 +220,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginStart="@dimen/layout_marginStart_button"
+        android:layout_marginStart="@dimen/layout_margin_button"
         android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text="0"
         android:textColor="@android:color/background_light"
@@ -287,8 +266,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="-"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -304,8 +282,7 @@
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
         android:layout_marginTop="@dimen/layout_marginTop_button"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="+"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
@@ -320,15 +297,14 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
-        android:layout_marginBottom="@dimen/layout_margin_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:text="*"
         android:textColor="@android:color/background_light"
         android:textSize="@dimen/button_textSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_minus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_9"
+        app:layout_constraintStart_toEndOf="@id/button_6"
         app:layout_constraintTop_toBottomOf="@+id/button_plus" />
 
     <Button
@@ -336,7 +312,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
-        android:layout_marginEnd="@dimen/layout_marginEnd_button"
+        android:layout_marginEnd="@dimen/layout_margin_button"
         android:layout_marginBottom="@dimen/layout_marginBottomEnd_button"
         android:text="/"
         android:textColor="@android:color/background_light"
